@@ -2,7 +2,7 @@ lsscsi (0.33-0.1) unstable; urgency=low
 
   * new upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 26 Sep 2021 23:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 26 Oct 2021 23:00:00 -0400
 
 lsscsi (0.32-0.1) unstable; urgency=low
 
